removed google analytics switched mathjax to online

--- a/war/idetc2013a.html
+++ b/war/idetc2013a.html
@@ -29,6 +29,11 @@
     
     <!-- 	Customized stylesheet and .js -->
 	<link href="css/font.css" rel="stylesheet" type="text/css" />
+	
+	<!-- 	Include Mathjax -->
+	<script type="text/javascript"
+	  src="https://c328740.ssl.cf1.rackcdn.com/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+	</script>
 	<script type="text/x-mathjax-config">
 	  MathJax.Hub.Config({
 		extensions: ["tex2jax.js"],
