polished lots of details.

--- a/war/aboutmaxdesign.html
+++ b/war/aboutmaxdesign.html
@@ -7,14 +7,6 @@
 	<link href="css/car.css" rel="stylesheet" type="text/css" />
 	<link href="css/font.css" rel="stylesheet" type="text/css" />
 	<script type="text/javascript" src="scripts/jquery-latest.min.js"></script>	
-	<script type="text/javascript" src="scripts/three.js"></script>
-	<script type="text/javascript" src="scripts/Detector.js"></script>
-	<script type="text/javascript" src="scripts/stats.js"></script>
-	<script type="text/javascript" src="scripts/carModel.js"></script>
-	<script type="text/javascript" src="scripts/model_new.js"></script>
-	<script type="text/javascript" src="scripts/matchbox.js"></script>
-	<script type="text/javascript" src="scripts/bezierpatch.js"></script>
-	<script type="text/javascript" src="scripts/utility2.js"></script>
 </head>
 <body>
 	<header id="header">
@@ -27,38 +19,22 @@
 		<div class="colour"></div>
 	</header>
 	<footer id="footer">
-		<p class="about"><a href="http://yirenumich.appspot.com">maxDesign </a> Max Yi Ren</p>
+		<p class="about"><a href="http://maxyiren.appspot.com">maxDesign </a> Max Yi Ren</p>
 		<p class="info" title="Navigate using your mouse &amp; Keyboard"></p>
 	</footer>
 	<div id="about">
-	<p>is an interactive car modeler I'm currently developing to create designs based on user preference. It is also a platform for testing learning algorithms 
-	and understanding <a href="/collection.html">crowd preferences</a>. 
-	The 3D modeling scripts follow the tutorials from <a href="http://learningwebgl.com/blog/">WebGL</a>, <a href="http://mrdoob.github.com/three.js/">THREE.JS</a> and <a href="http://web.chemdoodle.com/">Chemdoodle</a>. 
-	Some web design scripts are from <a href="http://soulwire.co.uk/hello">Soulwire</a>. 
-	I would like to express my gratitude to all these and other heros who made my work possible.
+	<p>About this project:
+	<br></br>carMesh is an interaction that helps to create car shapes based on user preference. 
+	It is also a platform for testing learning algorithms 
+	and understanding crowd preference. 
+	The 3D modeling scripts follow the tutorials 
+	from <a href="http://learningwebgl.com/blog/">Learning WebGL</a>, 
+	and is based on the <a href="http://mrdoob.github.com/three.js/">THREE.JS</a> engine. 
+	Some front-end scripts and style sheet elements 
+	are from <a href="http://soulwire.co.uk/hello">Soulwire</a>. 
+	I would like to express my gratitude to all these and other heros 
+	who made this little app to work.
 	</p>
 	</div>
-	
-<!-- 	<div class="share"> -->
-<!-- 		<ul> -->
-<!-- 			<li class="twitter"> -->
-<!-- 				<span class="icon"><em>Share this on Twitter</em></span> -->
-<!-- 				<span class="text"> -->
-<!-- 					<a href="http://twitter.com/share" class="twitter-share-button" data-url="http://yirenumich.appspot.com/hello.html" data-text="" data-count="horizontal" data-via="renyiumich">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script> -->
-<!-- 				</span> -->
-<!-- 			</li> -->
-<!-- 			<li class="google"> -->
-<!-- 				<span class="icon"><em>Google Plus 1</em></span> -->
-<!-- 				<span class="text"><g:plusone size="medium" href="http://yirenumich.appspot.com/hello.html"></g:plusone></span> -->
-<!-- 			</li> -->
-<!-- 			<li class="facebook"> -->
-<!-- 				<span class="icon"><em>Like this on Facebook</em></span> -->
-<!-- 				<span class="text"><iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fyirenumich.appspot.com%2Fhello.html&amp;layout=button_count&amp;show_faces=true&amp;width=110&amp;action=like&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true"></iframe></span> -->
-<!-- 			</li> -->
-<!-- 		</ul> -->
-<!-- 	</div> -->
-<!-- 	<script type="text/javascript" src="https://apis.google.com/js/plusone.js"> -->
-// 		{lang: 'en-GB'}
-<!-- 	</script> -->
 </body>
 </html>
