--- a/war/forICED.html
+++ b/war/forICED.html
@@ -183,16 +183,16 @@
 			<li class="twitter">
 				<span class="icon"><em>Share this on Twitter</em></span>
 				<span class="text">
-					<a href="http://twitter.com/share" class="twitter-share-button" data-url="http://yirenumich.appspot.com/hello.html" data-text="" data-count="horizontal" data-via="renyiumich">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+					<a href="http://twitter.com/share" class="twitter-share-button" data-url="http://maxyiren.appspot.com/hello.html" data-text="" data-count="horizontal" data-via="renyiumich">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
 				</span>
 			</li>
 			<li class="google">
 				<span class="icon"><em>Google Plus 1</em></span>
-				<span class="text"><g:plusone size="medium" href="http://yirenumich.appspot.com/hello.html"></g:plusone></span>
+				<span class="text"><g:plusone size="medium" href="http://maxyiren.appspot.com/hello.html"></g:plusone></span>
 			</li>
 			<li class="facebook">
 				<span class="icon"><em>Like this on Facebook</em></span>
-				<span class="text"><iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fyirenumich.appspot.com%2Fhello.html&amp;layout=button_count&amp;show_faces=true&amp;width=110&amp;action=like&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true"></iframe></span>
+				<span class="text"><iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fmaxyiren.appspot.com%2Fhello.html&amp;layout=button_count&amp;show_faces=true&amp;width=110&amp;action=like&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true"></iframe></span>
 			</li>
 		</ul>
 	</div>
