--- a/war/hello.html
+++ b/war/hello.html
@@ -27,7 +27,7 @@
 		<div class="colour"></div>
 	</header>
 	<footer id="footer">
-		<p class="about"><a href="http://yirenumich.appspot.com">Max Yi Ren</a></p>
+		<p class="about"><a href="http://maxyiren.appspot.com">Max Yi Ren</a></p>
 		<p class="info" title="Navigate using your mouse &amp; Keyboard"></p>
 	</footer>
 	<div id="abstract" style="position:absolute; top:80%; left:40%; text-align:center;z-index:4001">
@@ -49,12 +49,12 @@
 			<li class="twitter">
 				<span class="icon"><em>Share this on Twitter</em></span>
 				<span class="text">
-					<a href="http://twitter.com/share" class="twitter-share-button" data-url="http://yirenumich.appspot.com/hello.html" data-text="" data-count="horizontal" data-via="renyiumich">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+					<a href="http://twitter.com/share" class="twitter-share-button" data-url="http://maxyiren.appspot.com/hello.html" data-text="" data-count="horizontal" data-via="renyiumich">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
 				</span>
 			</li>
 			<li class="google">
 				<span class="icon"><em>Google Plus 1</em></span>
-				<span class="text"><g:plusone size="medium" href="http://yirenumich.appspot.com/hello.html"></g:plusone></span>
+				<span class="text"><g:plusone size="medium" href="http://maxyiren.appspot.com/hello.html"></g:plusone></span>
 			</li>
 			<li class="facebook">
 				<span class="icon"><em>Like this on Facebook</em></span>
