--- a/war/idetc2012c.html
+++ b/war/idetc2012c.html
@@ -274,14 +274,14 @@
 </section>
 
 <section class="slide">
-	<line style="position:absolute;left:0;right:0;text-align:center;font-size:80%;top:90%;">presentation available at http://yirenumich.appspot.com/idetc2012c.html</line>
+	<line style="position:absolute;left:0;right:0;text-align:center;font-size:80%;top:90%;">presentation available at http://maxyiren.appspot.com/idetc2012c.html</line>
 	<titleline>Thank you all for attending.<br>What questions do you have?</titleline>
 	<table style="position:absolute;left:20%;right:10%;width:70%;top:60%;">
 	<tr>
 	<td style="width:15%;">
 	<img style="width:100px;height:150px;margin:0;padding:0;display:inline;" src="images/idetc2012c/yiren2012jul.png"></td>
 	<td>
-	<p style="font-size:80%;margin-left:0%;">Research Fellow<br>Optimal Design Lab<br>University of Michigan<br>yiren@umich.edu<br>yirenumich.appspot.com</p></td>
+	<p style="font-size:80%;margin-left:0%;">Research Fellow<br>Optimal Design Lab<br>University of Michigan<br>yiren@umich.edu<br>maxyiren.appspot.com</p></td>
 	<td style="left: 50%;width:15%;">
 	<img style="width:100px;height:150px;margin-left:0;margin-bottom:0;padding:0;display:inline;" src="images/idetc2012c/panos.png"></td>
 	<td>
