--- a/war/idetc2013a.html
+++ b/war/idetc2013a.html
@@ -401,7 +401,7 @@
 
 <section class="slide">
 	<line style="position:absolute;left:0;right:0;text-align:center;font-size:80%;top:90%;">
-	presentation available at http://yirenumich.appspot.com/idetc2013a.html</line>
+	presentation available at http://maxyiren.appspot.com/idetc2013a.html</line>
 	<titleline>Thank you all for attending.<br>What questions do you have?</titleline>
 	<div style="position:absolute;top:60%;padding-left:5%;">
 		<div style="float:left;width:10%;">
@@ -410,7 +410,7 @@
 		<div style="float:left;width:20%;padding-right:3%;">
 			<p style="font-size:80%;margin-left:0%;">Research Fellow<br>
 			Optimal Design Lab<br>University of Michigan<br>
-			yiren@umich.edu<br>yirenumich.appspot.com</p></td>
+			yiren@umich.edu<br>maxyiren.appspot.com</p></td>
 		</div>
 		
 		<div style="float:left;width:10%;">
