--- a/war/index.html
+++ b/war/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<div id="side">
 			<div id="title">
-				<b><a class="links", href="http://ode.engin.umich.edu/people/yiren/yiren.html">Yi Ren (Max)</a></b>
+				<b><a class="links", href="http://ode.engin.umich.edu/people/yiren/yiren.html">Max Yi Ren</a></b>
 			</div>
 			<div id="info">
 				Research Fellow
@@ -69,8 +69,19 @@
 							</td>
 							<td>
 								<div class="des">
-								<a class="highlight_font">Design Preference Elicitation</a><br>
-								"What kind of cars do you like?" The answer lies in the rich interaction data from human and computers. 
+								<a class="highlight_font">Interactive preference elicitation</a><br>
+								"What kind of car style do you like?" While you may have serious opinions
+								on such a topic, getting your preferences across to other people is not 
+								easy, even if you are a designer. 
+								<br><br>
+								My colleagues and I are devoted to enhance the communication between 
+								consumers and product developers by creating online interactions to collect
+								rich data from both sides and incorporating tailored learning methods to 
+								recover and share knowledge from that data.
+								<br><br>
+								Our recent paper on identifying the most preferred products of a user
+								in an online-shopping environment can be found 
+								<a class="links" href="/resource/RenPapers/idetc2013a.pdf">here</a>.
 								</div>
 							</td>
 						</tr>
@@ -85,10 +96,23 @@
 							</td>
 							<td>
 								<div class="des">
-								<a class="highlight_font">Structured Design Representation</a><br>
-								Structured representation has been used in evolutionary computation, which has
-								the strength of exploration but lacks the ability of learning. 
-								Can machine learning on structured data be applied to enhance the evolution?
+								<a class="highlight_font">Learning configuration designs</a><br>
+								Real-world design problems often involve not only proportional but also 
+								configuration (architecture) designs. While the former can be addressed
+								using well-developed optimization techniques, the search of an optimal 
+								configuration usually requires enumeration and can be intractable. A 
+								heuristic search will thus be preferred only if we can tell what makes
+								good configurations different from others. We are interested in tailoring							interesting to investigate whether 
+								modern learning algorithms for structured data to meet this need. 
+								<br><br>
+								We are currently optimizing the configuration of a hybrid powertrain with
+								multiple driving modes. As the first step, an exhaustive configuration 
+								generation mechanism is tested with optimal control nested. The paper 
+								can be found 
+								<a class="links" href="/resource/RenPapers/idetc2013b.pdf">here</a>.
+								<br><br>
+								This work will be combined with the crowdsourcing platform to allow better 
+								design automation based on knowledge learned from crowd designers.
 								</div>
 							</td>
 						</tr>
@@ -103,9 +127,16 @@
 							</td>
 							<td>							
 								<div class="des">
-								<a class="highlight_font">Crowdsourcing for Design Solutions</a><br>
-								Designs can be proposed and evaluated by a crowd.
-								But what are the game rules in crowdsourcing for a design solution?
+								<a class="highlight_font">Recovering crowd evaluations</a><br>
+								In crowdsourcing design competitions, crowd-submitted designs 
+								are evaluated by another crowd. The crowd may contain true experts
+								who can correctly tell the pros and cons of the submitted designs,
+								among others who have more randomness in their evaluations.
+								<br><br> 
+								How can we identify the experts and estimate scores for the submissions?
+								Our <a class="links" href="/resource/RenPapers/idetc2013alex.pdf">
+								pilot study</a> comparing a Bayesian network and simple averaging sheds 
+								light on this question.
 								</div>
 							</td>
 						</tr>
