--- a/war/research.html
+++ b/war/research.html
@@ -11,7 +11,7 @@
 	<body>
 		<div id="side">
 			<div id="title">
-				<b><a class="links", href="http://ode.engin.umich.edu/people/yiren/yiren.html">Yi Ren (Max)</a></b>
+				<b><a class="links", href="http://ode.engin.umich.edu/people/yiren/yiren.html">Max Yi Ren</a></b>
 			</div>
 			<div id="info">
 				Research Fellow
