--- a/war/index.html
+++ b/war/index.html
@@ -42,6 +42,9 @@
 					<li>
 						<a class="unselected" href="publication.html">publications</a>
 					</li>
+					<li>
+						<a class="unselected" href="teaching.html">teaching</a>
+					</li>
 				</ul>
 			</div>
 			<br>
@@ -54,7 +57,7 @@
 				<br><br>
 				<div id="cv">
 					<a class="highlight_font" href="resource/yiren_cv2013.pdf">Curriculum Vitae</a> 
-					 | <a class="highlight_font" href="">Research Statement</a> 
+					 | <a class="highlight_font" href="resource/yiren_researchstatement_jul2013.pdf">Research Statement</a> 
 					 | <a class="highlight_font" href="">Teaching Statement</a>
 				</div>
 			</div>
@@ -69,7 +72,7 @@
 							</td>
 							<td>
 								<div class="des">
-								<a class="highlight_font">Interactive preference elicitation</a><br>
+								<b>Interactive preference elicitation</b><br>
 								"What kind of car style do you like?" While you may have serious opinions
 								on such a topic, getting your preferences across to other people is not 
 								easy, even if you are a designer. 
@@ -96,7 +99,7 @@
 							</td>
 							<td>
 								<div class="des">
-								<a class="highlight_font">Learning configuration designs</a><br>
+								<b>Learning configuration designs</b><br>
 								Real-world design problems often involve not only proportional but also 
 								configuration (architecture) designs. While the former can be addressed
 								using well-developed optimization techniques, the search of an optimal 
@@ -127,7 +130,7 @@
 							</td>
 							<td>							
 								<div class="des">
-								<a class="highlight_font">Recovering crowd evaluations</a><br>
+								<b>Recovering crowd evaluations</b><br>
 								In crowdsourcing design competitions, crowd-submitted designs 
 								are evaluated by another crowd. The crowd may contain true experts
 								who can correctly tell the pros and cons of the submitted designs,
