--- a/war/publication.html
+++ b/war/publication.html
@@ -43,9 +43,13 @@
 					<li>
 						<a class="selected" href="">publications</a>
 					</li>
+					<li>
+						<a class="unselected" href="teaching.html">teaching</a>
+					</li>
 				</ul>
 			</div>
 			<div id="publication">
+				<br>
 				<b>Journal papers</b><br>
 				<b>Ren, Y.</b> and Papalambros, P. Y., "A Design Preference Elicitation Query as an Optimization Process", 
 				<i>ASME Journal of Mechanical Design</i>, Vol. 133, No. 11, 2011. 
