--- a/war/research.html
+++ b/war/research.html
@@ -27,8 +27,7 @@
 				Advisor: <a class="links" href="http://www-personal.umich.edu/~pyp/">Panos Y. Papalambros</a>
 			</div>
 			<div id="footnote">
-				Last update of this page: Jul 08 2012. Tested on <a class="links" href="http://www.google.com/chrome">Chrome</a> only.
-			</div>
+				Last update of this page: Jul 25 2013.</div>
 		</div>
 		
 		<div id="content">
@@ -43,16 +42,23 @@
 					<li>
 						<a class="unselected" href="publication.html">publications</a>
 					</li>
+					<li>
+						<a class="unselected" href="teaching.html">teaching</a>
+					</li>
 				</ul>
 			</div>
 			<div id="statement">
-				<h2>Current Research</h2>
+				<br>
+				<b>Current research</b><br><br>
 				
-				<a class="highlight_font">Design Preference Elicitation</a><br>
-				"What kind of cars do you like?" The answer lies in the rich interaction data from human and computers. 
+				
+				<b>Project archive</b><br>
+				<b>Design Preference Elicitation</b><br>
 				We develop interaction methods to elicit preferred designs from users. 
-				Technically, the research contains three components: 1) Learning interaction data to model user preferences, 
-				2) Proposing new designs to optimize the learned model from 1), and 3) Improving 2) by using crowd interaction data.  
+				Technically, the research contains three components: 
+				1) Learning interaction data to model user preferences, 
+				2) Proposing new designs to optimize the learned model from 1), 
+				and 3) Improving 2) by using crowd interaction data.  
 				<br><br>
 				<em>Ongoing project: <a class="links" href="hello.html">carMesh</a></em>
 				<br><br><br>
