--- a/war/index.html
+++ b/war/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<div id="side">
 			<div id="title">
-				<b><a class="links", href="http://ode.engin.umich.edu/people/yiren/yiren.html">Max Yi Ren</a></b>
+				<b><a class="links", href="http://ode.engin.umich.edu/people/yiren/personalpageYi.html">Max Yi Ren</a></b>
 			</div>
 			<div id="info">
 				Research Fellow
