--- a/war/index.html
+++ b/war/index.html
@@ -49,16 +49,16 @@
 			</div>
 			<br>
 			<div id="me">
-				I am interested in human-computer interactions and machine learning applied to engineering and art design. 
+				I am interested in human-computer interactions and machine learning techniques applied to engineering and art design. 
 				My <a class="links" href="http://ode.engin.umich.edu/publications/Dissertations&Theses/RenDissertationIntro.pdf">
-				dissertation</a> focused on eliciting user preferences through interactions. 
-				My current research focuses on developing tailored learning algorithms for various 
-				engineering and design applications. 
+				dissertation</a> work focused on eliciting user preferences efficiently through interactions. 
+				I'm currently working on several engineering and design projects that require developments of tailored 
+				learning algorithms.
 				<br><br>
 				<div id="cv">
 					<a class="highlight_font" href="resource/yiren_cv2013.pdf">Curriculum Vitae</a> 
 					 | <a class="highlight_font" href="resource/yiren_researchstatement_jul2013.pdf">Research Statement</a> 
-					 | <a class="highlight_font" href="">Teaching Statement</a>
+					 | <a class="highlight_font" href="">Teaching Statement (coming soon)</a>
 				</div>
 			</div>
 
